# Labs-C-

Lab0/: CMakeLists.txt  main.cpp  word_counter.cpp  word_counter.h
Lab1/: CMakeLists.txt  catch.hpp  main.cpp  tests.cpp  trit.cpp  trit.h  tritset.cpp  tritset.h
Lab2/: CMakeLists.txt  main.cpp
Lab2/Blocks/: DumpBlock.cpp  DumpBlock.h  GrepBlock.cpp  GrepBlock.h  ReadBlock.cpp  ReadBlock.h  ReplaceBlock.cpp  ReplaceBlock.h  SortBlock.cpp  SortBlock.h  WriteBlock.cpp  WriteBlock.h
Lab2/Exceptions/: FactoryException.cpp  FactoryException.h  ParserException.cpp  ParserException.h  ValidatorException.cpp  ValidatorException.h  WorkFlowException.cpp  WorkFlowException.h
Lab2/Factory/: BlockFactory.cpp  BlockFactory.h  BlockMaker.h
Lab2/Interfaces/: IBlock.h  IBlockMaker.h  IParser.h  IValidator.h  IWorkFlow.h
Lab2/Parser/: Parser.cpp  Parser.h
Lab2/Validator/: Validator.cpp  Validator.h
Lab2/WorkFlow/: WorkFlow.cpp  WorkFlow.h
Lab3/: CMakeLists.txt  GamePreferences.h  main.cpp
Lab3/ConsoleView/: ConsoleView.cpp  ConsoleView.h
Lab3/GameController/: GameController.cpp  GameController.h
Lab3/GamerFactory/: GamerFactory.h
Lab3/Gamers/: ConsoleGamer.cpp  ConsoleGamer.h  OptimalGamer.cpp  OptimalGamer.h  RandomGamer.cpp  RandomGamer.h
Lab3/Interfaces/: IGameController.h  IGameView.h  IGamer.h
Lab3/Map/: Map.cpp  Map.h
Lab4/: CMakeLists.txt  main.cpp
Lab4/CSVParser/: CSVParser.h
